--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,15 +23,25 @@
       <div class="navbar-inner">
         <div class="container">
           {% include lang_home %}
+          <!-- navbar collapsed icon -->
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+          </a>
+           
           <a class="brand" href="{{LANG_HOME}}">{{site.title}}</a>
-          <ul class="nav">
-            {% assign pages_list = site.pages %}
-            {% assign group = 'navigation' %}
-            {% include pages_list %}
-          </ul>
-          <ul class="nav pull-right">
-            {% include langs_list %}
-          </ul>
+           
+          <div class="nav-collapse">
+            <ul class="nav">
+              {% assign pages_list = site.pages %}
+              {% assign group = 'navigation' %}
+              {% include pages_list %}
+            </ul>
+            <ul class="nav pull-right">
+              {% include langs_list %}
+            </ul>
+          </div>
         </div>
       </div>
     </div>
